# ark

./: .gitignore  Makefile  README  apple_notes.py  imessage.py  opensearch.sh  pyproject.toml  server.py
frontend/: package.json
frontend/src/: App.css  App.tsx
